--- a/crates/plugins/Cargo.toml
+++ b/crates/plugins/Cargo.toml
@@ -18,6 +18,7 @@ reqwest         = { workspace = true }
 serde           = { workspace = true }
 serde_json      = { workspace = true }
 tar             = "0.4"
+time            = { workspace = true }
 tokio           = { workspace = true }
 toml            = { workspace = true }
 tracing         = { workspace = true }
