--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,8 @@ jobs:
       - name: Install build dependencies for llama.cpp
         run: |
           sudo apt-get update
-          sudo apt-get install -y cmake build-essential libclang-dev pkg-config
+          sudo apt-get install -y cmake build-essential libclang-dev pkg-config nvidia-cuda-toolkit
+          nvcc --version
       - uses: dtolnay/rust-toolchain@f7ccc83f9ed1e5b9c81d8a67d7ad1a747e22a561 # master
         with:
           toolchain: nightly
@@ -114,7 +115,8 @@ jobs:
       - name: Install build dependencies for llama.cpp
         run: |
           sudo apt-get update
-          sudo apt-get install -y cmake build-essential libclang-dev pkg-config
+          sudo apt-get install -y cmake build-essential libclang-dev pkg-config nvidia-cuda-toolkit
+          nvcc --version
       - uses: dtolnay/rust-toolchain@f7ccc83f9ed1e5b9c81d8a67d7ad1a747e22a561 # master
         with:
           toolchain: nightly
