fix(config): resolve lock reentrancy deadlock in update_config
discover_and_load() called save_config() when the loaded config had
port == 0, which re-acquires CONFIG_SAVE_LOCK. When called from
update_config() (which already holds the lock), this deadlocked on
the non-reentrant std::sync::Mutex.

This manifested in CI where concurrent nextest processes could race
on the shared ~/.moltis/moltis.toml file, leaving a config with
port = 0 that triggered the reentrant lock path.

Fix:
- Use save_config_to_path() directly in discover_and_load() to
  bypass the lock (safe because the caller already holds it or
  there is no concurrent mutation to guard against)
- Isolate auth_middleware integration tests with per-process temp
  config/data directories via set_config_dir/set_data_dir
- Add slow-timeout with terminate-after to nextest CI profile so
  hung tests are killed after 120s instead of blocking forever

--- a/.config/nextest.toml
+++ b/.config/nextest.toml
@@ -8,5 +8,7 @@ retries = 0
 # In CI, retry flaky tests once before failing the run.
 failure-output = "immediate-final"
 retries        = 2
+# Kill tests that hang for more than 120 seconds.
+slow-timeout   = { period = "60s", terminate-after = 2 }
 # Produce JUnit XML for GitHub Actions test summary.
 junit.path = "junit.xml"
