--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -201,10 +201,29 @@ jobs:
           fi
           echo "version=$VERSION" >> "$GITHUB_OUTPUT"
 
-      - name: Sync Cargo workspace version to release version
+      - name: Verify Cargo workspace version matches release version
         env:
           VERSION: ${{ steps.release_version.outputs.version }}
-        run: sed -Ei "s/^version[[:space:]]*=.*/version    = \"${VERSION}\"/" Cargo.toml
+        run: |
+          CARGO_VERSION=$(awk '
+            $0 == "[workspace.package]" { in_section = 1; next }
+            in_section == 1 && $0 ~ /^\[/ { in_section = 0 }
+            in_section == 1 && $0 ~ /^version[[:space:]]*=/ {
+              if (match($0, /"[^"]+"/)) {
+                print substr($0, RSTART + 1, RLENGTH - 2)
+                exit
+              }
+            }
+          ' Cargo.toml)
+          if [[ -z "$CARGO_VERSION" ]]; then
+            echo "failed to resolve [workspace.package].version from Cargo.toml" >&2
+            exit 1
+          fi
+          if [[ "$CARGO_VERSION" != "$VERSION" ]]; then
+            echo "tag version (${VERSION}) does not match Cargo.toml (${CARGO_VERSION})" >&2
+            echo "run ./scripts/prepare-release.sh ${VERSION} before tagging" >&2
+            exit 1
+          fi
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@f7ccc83f9ed1e5b9c81d8a67d7ad1a747e22a561 # master
@@ -278,10 +297,29 @@ jobs:
           fi
           echo "version=$VERSION" >> "$GITHUB_OUTPUT"
 
-      - name: Sync Cargo workspace version to release version
+      - name: Verify Cargo workspace version matches release version
         env:
           VERSION: ${{ steps.release_version.outputs.version }}
-        run: sed -Ei "s/^version[[:space:]]*=.*/version    = \"${VERSION}\"/" Cargo.toml
+        run: |
+          CARGO_VERSION=$(awk '
+            $0 == "[workspace.package]" { in_section = 1; next }
+            in_section == 1 && $0 ~ /^\[/ { in_section = 0 }
+            in_section == 1 && $0 ~ /^version[[:space:]]*=/ {
+              if (match($0, /"[^"]+"/)) {
+                print substr($0, RSTART + 1, RLENGTH - 2)
+                exit
+              }
+            }
+          ' Cargo.toml)
+          if [[ -z "$CARGO_VERSION" ]]; then
+            echo "failed to resolve [workspace.package].version from Cargo.toml" >&2
+            exit 1
+          fi
+          if [[ "$CARGO_VERSION" != "$VERSION" ]]; then
+            echo "tag version (${VERSION}) does not match Cargo.toml (${CARGO_VERSION})" >&2
+            echo "run ./scripts/prepare-release.sh ${VERSION} before tagging" >&2
+            exit 1
+          fi
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@f7ccc83f9ed1e5b9c81d8a67d7ad1a747e22a561 # master
@@ -646,6 +684,68 @@ jobs:
             *.tar.gz.sig
             *.tar.gz.crt
 
+  build-windows-exe:
+    needs: [clippy, test, e2e]
+    runs-on: windows-latest
+    name: Build .exe (x86_64)
+    permissions:
+      contents: read
+      id-token: write # Required for Sigstore keyless signing
+    env:
+      BUILD_TARGET: x86_64-pc-windows-msvc
+
+    steps:
+      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4
+        with:
+          persist-credentials: false
+
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@f7ccc83f9ed1e5b9c81d8a67d7ad1a747e22a561 # master
+        with:
+          toolchain: stable
+          targets: ${{ env.BUILD_TARGET }}
+
+      - name: Install cosign
+        uses: sigstore/cosign-installer@d7d6bc7722e3daa8354c50bcb52f4837da5e9b6a # v3.8.1
+
+      - name: Build release binary
+        shell: bash
+        run: cargo build --release --target "$BUILD_TARGET"
+
+      - name: Determine package version
+        id: version
+        shell: bash
+        run: |
+          if [[ "$GITHUB_REF" == refs/tags/v* ]]; then
+            VERSION="${GITHUB_REF#refs/tags/v}"
+          else
+            VERSION=$(grep '^version' Cargo.toml | head -1 | sed 's/.*"\(.*\)"/\1/')
+          fi
+          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
+
+      - name: Package .exe
+        shell: bash
+        env:
+          VERSION: ${{ steps.version.outputs.version }}
+        run: |
+          cp "target/$BUILD_TARGET/release/moltis.exe" "moltis-${VERSION}-${BUILD_TARGET}.exe"
+
+      - name: Sign with Sigstore and generate checksums
+        uses: ./.github/actions/sign-artifacts
+        with:
+          files: moltis-${{ steps.version.outputs.version }}-${{ env.BUILD_TARGET }}.exe
+
+      - name: Upload .exe artifact
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
+        with:
+          name: moltis-${{ env.BUILD_TARGET }}.exe
+          path: |
+            *.exe
+            *.exe.sha256
+            *.exe.sha512
+            *.exe.sig
+            *.exe.crt
+
   build-docker:
     needs: [clippy, test, e2e]
     strategy:
@@ -683,10 +783,29 @@ jobs:
           fi
           echo "version=$VERSION" >> "$GITHUB_OUTPUT"
 
-      - name: Sync Cargo workspace version to release version
+      - name: Verify Cargo workspace version matches release version
         env:
           VERSION: ${{ steps.release_version.outputs.version }}
-        run: sed -Ei "s/^version[[:space:]]*=.*/version    = \"${VERSION}\"/" Cargo.toml
+        run: |
+          CARGO_VERSION=$(awk '
+            $0 == "[workspace.package]" { in_section = 1; next }
+            in_section == 1 && $0 ~ /^\[/ { in_section = 0 }
+            in_section == 1 && $0 ~ /^version[[:space:]]*=/ {
+              if (match($0, /"[^"]+"/)) {
+                print substr($0, RSTART + 1, RLENGTH - 2)
+                exit
+              }
+            }
+          ' Cargo.toml)
+          if [[ -z "$CARGO_VERSION" ]]; then
+            echo "failed to resolve [workspace.package].version from Cargo.toml" >&2
+            exit 1
+          fi
+          if [[ "$CARGO_VERSION" != "$VERSION" ]]; then
+            echo "tag version (${VERSION}) does not match Cargo.toml (${CARGO_VERSION})" >&2
+            echo "run ./scripts/prepare-release.sh ${VERSION} before tagging" >&2
+            exit 1
+          fi
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3
@@ -836,6 +955,7 @@ jobs:
       - build-appimage
       - build-snap
       - build-homebrew-binaries
+      - build-windows-exe
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     name: Upload release assets
@@ -860,7 +980,7 @@ jobs:
           mkdir -p release-files
           find artifacts -type f \( \
             -name '*.deb' -o -name '*.rpm' -o -name '*.pkg.tar.zst' \
-            -o -name '*.AppImage' -o -name '*.snap' -o -name '*.tar.gz' \
+            -o -name '*.AppImage' -o -name '*.snap' -o -name '*.tar.gz' -o -name '*.exe' \
             -o -name '*.sha256' -o -name '*.sha512' -o -name '*.sig' -o -name '*.crt' \
           \) -exec cp {} release-files/ \;
           echo "Files to upload:"
